# aos

projects/aos/sos/src/: main.c
unused/projects_libs/: .licenseignore  .stylefilter  CMakeLists.txt  Findprojects_libs.cmake  README.md
unused/projects_libs/.reuse/: dep5
unused/projects_libs/libfdtgen/: CMakeLists.txt  fdtgen.c
unused/projects_libs/libfdtgen/include/: fdtgen.h
unused/projects_libs/libjansson/: CMakeLists.txt  README.md
unused/projects_libs/libjansson/include/: jansson_config.h
unused/projects_libs/libmsgpack/: CMakeLists.txt  README.md
unused/projects_libs/libplatsupportports/: CMakeLists.txt  README.md
unused/projects_libs/libplatsupportports/plat_include/tx2/platsupportports/plat/: gpio.h  mux.h
unused/projects_libs/libplatsupportports/src/plat/tx2/: clock.c  clock_bindings.c  gpio.c  mux.c  reset.c  reset_bindings.c
unused/projects_libs/libringbuffer/: CMakeLists.txt
unused/projects_libs/libringbuffer/include/ringbuffer/: ringbuffer.h
unused/projects_libs/libringbuffer/src/: ringbuffer.c
unused/projects_libs/libsdhcdrivers/: CMakeLists.txt
unused/projects_libs/libsdhcdrivers/include/sdhc/: mmc.h  sdio.h
unused/projects_libs/libsdhcdrivers/plat_include/exynos4/sdhc/plat/: sdio.h
unused/projects_libs/libsdhcdrivers/plat_include/imx6/sdhc/plat/: sdio.h
unused/projects_libs/libsdhcdrivers/src/: mmc.c  mmc.h  sdhc.c  sdhc.h  services.h
unused/projects_libs/libsdhcdrivers/src/plat/exynos4/: sdio.c
unused/projects_libs/libsdhcdrivers/src/plat/imx6/: sdio.c
unused/projects_libs/libtx2bpmp/: CMakeLists.txt  DESIGN.md  README.md
unused/projects_libs/libtx2bpmp/include/tx2bpmp/: bpmp.h  clock_bindings.h  hsp.h  ivc.h  reset_bindings.h
unused/projects_libs/libtx2bpmp/src/: bpmp.c  hsp.c  ivc.c
unused/projects_libs/libusbdrivers/: CMakeLists.txt  README.md
unused/projects_libs/libusbdrivers/include/usb/: otg.h  usb.h  usb_host.h
unused/projects_libs/libusbdrivers/include/usb/drivers/: cdc.h  lan9730.h  mouse.h  otgusbtty.h  pl2303.h  ufi.h  usb3503_hub.h  usbhub.h  usbkbd.h
unused/projects_libs/libusbdrivers/plat_include/exynos5/usb/plat/: usb.h
unused/projects_libs/libusbdrivers/plat_include/imx6/usb/plat/: usb.h
unused/projects_libs/libusbdrivers/plat_include/pc99/usb/plat/: usb.h
unused/projects_libs/libusbdrivers/src/: otg.c  services.h  usb.c
unused/projects_libs/libusbdrivers/src/drivers/: cdc.c  cdc.h  hid.c  hid.h  lan9730.c  mouse.c  otgusbtty.c  otgusbtty.h  pl2303.c  storage.c  storage.h  ufi.c  usbhub.c  usbhub.h  usbkbd.c  usbkbd.h
unused/projects_libs/libusbdrivers/src/drivers/arch/arm/: usb3503_hub.c
unused/projects_libs/libusbdrivers/src/ehci/: async.c  debug.c  ehci.h  hcd.c  hub.c  periodic.c
unused/projects_libs/libusbdrivers/src/plat/: usb_otg.h
unused/projects_libs/libusbdrivers/src/plat/exynos5/: ehci-exynos5.c
unused/projects_libs/libusbdrivers/src/plat/imx6/: ehci-imx6.c  otg-imx6.c
unused/projects_libs/libusbdrivers/src/plat/pc99/: ehci-pci.c
unused/projects_libs/libvirtqueue/: CMakeLists.txt  README.md
unused/projects_libs/libvirtqueue/include/: virtqueue.h
unused/projects_libs/libvirtqueue/src/: virtqueue.c
unused/projects_libs/libvswitch/: CMakeLists.txt  README.md
unused/projects_libs/libvswitch/include/: vswitch.h
unused/projects_libs/libvswitch/src/: vswitch.c
