#
# Copyright 2017, Data61, CSIRO (ABN 41 687 119 230)
#
# SPDX-License-Identifier: BSD-2-Clause
#

cmake_minimum_required(VERSION 3.7.2)

add_subdirectory(libjansson)
add_subdirectory(libmsgpack)
add_subdirectory(libringbuffer)
add_subdirectory(libsdhcdrivers)
add_subdirectory(libusbdrivers)
add_subdirectory(libnfs)
add_subdirectory(libvirtqueue)
add_subdirectory(libvswitch)
add_subdirectory(libfdtgen)
add_subdirectory(libtx2bpmp)
add_subdirectory(libplatsupportports)
